typos ej 2 guia 7

--- a/7-guia/ejercicios-7/ej-36-7.tex
+++ b/7-guia/ejercicios-7/ej-36-7.tex
@@ -1,1 +1,18 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+  \begin{enumerate}[label=\roman*)]
+    \item En cada caso, hallar un polinomio $f \en \racionales[X]$ de grado
+          mínimo tal que:
+          \begin{enumerate}[label=(\alph*)]
+            \item $X^2(X^2 + 1) \divideA (f:f')$.
+            \item $(f:f') = X^5 - 5X^4 + \frac{25}{4}X^3 \ytext f(1) = 3$.
+            \item $X + 2 \divideA f,\, (f:(X - \sqrt{2})^2) = X - \sqrt{2}
+                    \ytext f$ mónico.
+          \end{enumerate}
+
+    \item
+          Determinar todos los $f \en \racionales[X]$ mónicos de grado 5 que satisfacen
+          simultáneamente que $(f: f')$ tiene grado $2,\, 1+2i$ es raíz de $f$ y $f(1) = \frac{1}{2}$.
+  \end{enumerate}
+\end{enunciado}
+
+\hacer
