--- a/1-guia/ejercicios-1/ej-6-1.tex
+++ b/1-guia/ejercicios-1/ej-6-1.tex
@@ -8,10 +8,13 @@
 \end{enunciado}
 
 \begin{multicols}{3}
+  \tikzset{
+  }
   \begin{enumerate}[label=\roman*)]
     \item
           \begin{venndiagram3sets}[shade=gray!20!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
-            \fillCCapANotB
+            \fillOnlyC
+            \fillCCapA
             \fillOnlyC
           \end{venndiagram3sets}
 
@@ -34,4 +37,5 @@
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/matiasasantos}{Matías Santos \github}
 \end{aportes}
