fix ej 19i y 22iii

--- a/1-guia/ejercicios-1/ej-19-1.tex
+++ b/1-guia/ejercicios-1/ej-19-1.tex
@@ -135,7 +135,7 @@ Podés ver el resumen de la \hyperlink{teoria-1:relaciones}{teoría acá y así 
         \begin{minipage}{0.7\textwidth}
           \textit{Por extensión:}
           $$
-            \set{(a,b),(b,a),(c,d),(c,h),(e,c),(f,f),(h,g)}
+            \set{(a,b),(b,a),(c,c),(c,d),(c,h),(e,c),(f,f),(h,g)}
           $$
           \begin{itemize}
             \item \textit{Reflexiva}: Noup, porque no hay bucles en todos los vértices, en particular $a \norelacion a$.
@@ -219,4 +219,5 @@ Podés ver el resumen de la \hyperlink{teoria-1:relaciones}{teoría acá y así 
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{\neverGonnaGiveYouUp}{Agus F. \youtube}
 \end{aportes}
