fix ej extra 10 guia 2

--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -263,7 +263,7 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
 
 \end{enumerate}
 
-\begin{aportes}
+\begin{aportes}[4]
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{\neverGonnaGiveYouUp}{Magui \youtube}
   \item \aporte{https://github.com/sigfripro}{sigfripro \github}
