--- a/2-guia/ejercicios-2-extra/ej-extra-10-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-10-2.tex
@@ -76,10 +76,10 @@ $$
      & \igual{\red{!}}          &
     \sumatoria{i=1}{\blue{k}} \frac{3}{\blue{k}+i}- \frac{3}{k+1} + \frac{3}{2k+1} + \frac{3}{2(k+1)} \\
      & \mayorIgual{\purple{HI}} &
-    \frac{39}{20} - \frac{3}{k+1} + \frac{3}{2k+1} + \frac{3}{2(k+1)}
+    \frac{37}{20} - \frac{3}{k+1} + \frac{3}{2k+1} + \frac{3}{2(k+1)}
     \igual{\red{!}}
-    \frac{39}{20} + \ub{\frac{3}{2(k+1)(2k+1)}}{\geq 0 \paratodo k \en \naturales}
-    \geq \frac{39}{20}
+    \frac{37}{20} + \ub{\frac{3}{2(k+1)(2k+1)}}{\geq 0 \paratodo k \en \naturales}
+    \geq \frac{37}{20}
   \end{array}
 $$
 
@@ -89,4 +89,5 @@ lo es $p(n) \paratodo n \en \naturales_{\geq3}$
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/fransureda}{Francisco Sureda \github}
 \end{aportes}
