--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -185,10 +185,8 @@
 \end{enumerate}
 
 % Contribuciones
-\begin{aportes}
-  %% iconos : \github, \enstagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
+\begin{aportes}[3]
   \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
   \item \aporte{\dirRepo}{nad GarRaz \github}
-  \item \aporte{https://www.instagram.com/fransureda_}{Francisco Sureda \instagram}
+  \item \aporte{https://github.com/fransureda}{Francisco Sureda \github}
 \end{aportes}
