fix spaces in tikzpicture node distance

--- a/1-guia/ejercicios-1/ej-33-1.tex
+++ b/1-guia/ejercicios-1/ej-33-1.tex
@@ -6,7 +6,8 @@ plot style/.style={
 baseline=0,
 oval/.style={ellipse, draw, minimum width=1cm, minimum height=1.5cm, align=center, label={##1}:{$\naturales$}},
 arrow/.style={-{Latex[length=5pt]}, bend left=20},
-comp/.style={-{Latex[length=5pt]}, color=##1, bend right=25, font={\tiny}}
+comp/.style={-{Latex[length=5pt]}, color=##1, bend right=25, font={\tiny}},
+node distance=1.7cm,
 }
 }
 %=======
@@ -47,7 +48,6 @@ $$
 Por otro lado sí quiero algo así:
 \begin{tikzpicture}[
     plot style,
-    node distance=1.7cm,
     imagen/.style={ellipse, draw, dashed, minimum width=0.3cm, minimum height=0.8cm, align=center, color=Cerulean, font={\tiny}},
   ]
   \node[oval={above left}] (A) {};
